Update bank removing record